# dfs-graph-transformer

./: .README_new.md.kate-swp  .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  hardcopy.0  install_additional.sh  out.txt  preprocess_chembl.sh  preprocess_pubchem.sh  preprocess_pubchem_mini.sh  pyproject.toml  qm9_pytorch_geometric_vs_qm9_deepchem.ipynb  setup.py
artifacts/bert-4-10K:v6/: config.yaml
artifacts/rnd2min-10M:v1/: config.yaml
config/selfattn/: bert.yaml  bert100K.yaml  bert10K.yaml  bert10M.yaml  bert1M.yaml  finetune_bert.yaml  finetune_moleculenet.yaml  finetune_ogb.yaml  finetune_qm9.yaml  finetune_rnd2min.yaml  moleculenet.yaml  rnd2min.yaml  rnd2min1M.yaml  (+3 more)
exp/: upload_artefact.py  upload_artifact.py
notebooks/: DGL QM9 Baseline.ipynb  DGL classification tutorial.ipynb  QM9 graphs manual.ipynb  Schnet Pretrained.ipynb  Torch Geometric QM9 Baseline Legacy Version with Notes.ipynb  Torch Geometric QM9 Baseline Testset.ipynb  Torch Geometric QM9 Baseline.ipynb  Torch Geometric QM9 Graph Attention + DFS Codes.ipynb  Torch Geometric QM9 Graph Attention MPNN + DFS Codes.ipynb  Torch Geometric QM9 Graph Attention MPNN .ipynb  Torch Geometric QM9 Graph Attention MPNN.ipynb  Torch Geometric QM9 Graph Attention.ipynb  Torch Geometric QM9 Graph Transformer Distance Based.ipynb  Torch Geometric QM9 Graph Transformer Mini.ipynb  Torch Geometric QM9 Graph Transformer PEs.ipynb  Torch Geometric QM9 Graph Transformer.ipynb  Torch Geometric QM9 MySchnet + DFS Codes Testset Only.ipynb  Torch Geometric QM9 MySchnet + DFS Codes.ipynb  Torch Geometric QM9 MySchnet.ipynb  Torch QM9 to DFS Codes.ipynb  graphein2dlist.ipynb  graphein2mindfs.ipynb  ogb-mag.ipynb  pdb2graph-stats.ipynb  pdb2graph.ipynb  pdb2mindfs-restrictive.ipynb  pdb2mindfs.ipynb  tudataset2mindfs.ipynb
notes/: Minimal DFS codes vs SMILES vs Graphs.docx  molecule_plus_dfs_indices.xcf
preprocessed/: README.md
scripts/: compute_enzyme_dfs_codes.sh  create_grouped_run.py  preprocess_chembl.sh  preprocess_moses.sh  preprocess_pubchem.sh  preprocess_pubchem_mini.sh  preprocess_pubchemdata.sh  preprocess_pubchemprops.sh  run_eval.py  start_evaluation.sh  start_finetune.sh  start_jobs.sh  start_karateclub.sh  start_pretraining.sh
src/: sPickle.py
(+619 files in other folders)
