[tool.poetry]
name = "graph-transformer"
version = "0.1.0"
description = "Implementation of a graph transformer, which acts on graphs via their representation as minimal DFS codes."
authors = ["Chris Wendler <chris.wendler@inf.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
torch-geometric = "^1.7.2"
torch = "^1.9.0"
matplotlib = "^3.4.2"
tqdm = "^4.61.1"
pandas = "^1.2.5"
jupyter = "^1.0.0"
ase = "^3.22.0"
schnetpack = "^0.3"
pybind11 = "^2.6.2"
func-timeout = "^4.3.5"
sacred = "0.8.2"
wandb = "^0.10.33"
PyQtWebEngine = "^5.15.4"
ogb = "^1.3.1"
focal-loss-torch = "^0.0.7"
deepchem = "^2.5.0"
numpy = "1.19.3"
tensorflow = "^2.6.0"
rdkit-pypi = "^2021.3.4"
chemprop = "^1.3.1"
dgl = "^0.6.1"
dgllife = "^0.2.8"
ml-collections = "^0.1.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
